Fix layout problem with browser items
Depending from browser, where were gaps between items.
Hopefully, now disappers

--- a/style/JSRootPainter.css
+++ b/style/JSRootPainter.css
@@ -47,6 +47,11 @@
     color: blue;
 }
 
+.jsroot .h_line {
+   height: 18px;
+   display: block;
+}
+
 .jsroot .h_item {
     cursor: pointer;
 }
